# pwmanager

./: docker-compose.yml  package-lock.json  pyproject.toml  schema.yml
auth/: forms.py  models.py  routers.py  serializers.py  urls.py  views.py  viewsets.py
auth/migrations/: 0001_initial.py
backend/: Dockerfile  manage.py  pyproject.toml
backend/core/: urls.py  views.py
backend/passwords/: admin.py  models.py  serializers.py  tests.py
backend/passwords/migrations/: 0001_initial.py  0003_secretpassword_account.py
backend/pwmanager/: routers.py  settings.py  urls.py  wsgi.py
backend/templates/: homepage.html
core/: models.py  routers.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
core/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  custom_axios.js  index.css  index.js
frontend/src/components/: home.js  login.js  logout.js  navigation.js  passwordformdialog.js  passwords.js  register.js  sidebar.js  topnavbar.js  user_form.js
frontend/src/styles/: tailwind.css
passwords/: models.py  routers.py  serializers.py  urls.py  views.py  viewsets.py
passwords/migrations/: 0002_secretpassword_name.py
pwmanager/: asgi.py  routers.py  settings.py  urls.py  views.py
templates/: header.html
